完成主页公告，博客卡片示例

--- a/universezy/index.html
+++ b/universezy/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <link rel="icon" type="image/x-icon" href="static/logo.png" />
   <link rel="shortcut icon" type="image/x-icon" href="static/logo.png" />
-  <title>Universe ZY</title>
+  <title>进击的小宇宙</title>
 </head>
 
 <body>
