修改UI，完成背景

--- a/universezy/index.html
+++ b/universezy/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+html {
+  height: auto;
+  min-width: 800px;
+  min-height: 800px;
+  -webkit-font-smoothing: antialiased;
+}
+</style>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
